package models;

public enum Genre {
    MALE, FEMALE
}
